--- a/index.html
+++ b/index.html
@@ -66,10 +66,11 @@
             <input type="email" name="email" id="email">
             <label for="Phone">Phone no.:</label>
             <input type="tel" name="Phone" id="Phone">
-            <input type="submit" value="">
+            <input type="submit" value="Submit">
         </form>
         contact us: <a href="mailto:info@laundrymart.com">info@laundrymart.com</a>
         </section>
     </main>
 </body>
+
 </html>
