--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
             <h2>Book Now</h2>
             <form>
             <label for="name">Name:</label>
-            <input type="text" name="name" id="name">
+            <input type="text" name="name" id="name" required>
             <label for="email">Email:</label>
-            <input type="email" name="email" id="email">
+            <input type="email" name="email" id="email" required >
             <label for="Phone">Phone no.:</label>
-            <input type="tel" name="Phone" id="Phone">
+            <input type="tel" name="Phone" id="Phone" required>
             <input type="submit" value=" Submit ">
         </form>
         contact us: <a href="mailto:info@laundrymart.com">info@laundrymart.com</a>
@@ -74,4 +74,5 @@
 </body>
 
 </html>
+
 
